# switcharoohelper

./: .gitignore  Dockerfile  Readme.md  check_up.py  credentials.py  main.py  pyproject.toml  requirements.txt  test.py  tracer.py
.github/workflows/: build-docker.yml  coverage.yml  deploy.yml  python-app.yml
config/: cron.jobs  switcharoo_main.service
config/services/: switcharoo_flair.service  switcharoo_main.service
core/: __init__.py  action.py  arguments.py  constants.py  credentials.py  history.py  inbox.py  issues.py  last_data.py  last_switcharoo.py  operator.py  parse.py  process.py  pushshift.py  reddit.py  strings.py
docs/: check_up.md  tests.md
oldtests/: action.py  parse.py  process.py
oldtests/configs/: action.ini
switcharoo/: check_up.py  main.py
switcharoo/config/: arguments.py  constants.py  credentials.py  issues.py  strings.py
switcharoo/core/: action.py  history.py  inbox.py  operator.py  parse.py  process.py  reddit.py
switcharoo/tools/: db.py  tracer.py  userflair_import.py  userflair_update.py
switcharoo/utils/: __init__.py
tests/: __init__.py  action.py  conftest.py  parse.py  process.py  process_test.py  reprocess_test.py
tests/configs/: process.ini
tests/mock/praw/: __init__.py  exceptions.py  reddit.py
tests/mock/praw/models/: __init__.py  comment.py  redditor.py  submission.py
tests/mock/requests/: __init__.py
tests/shims/: praw.py
tools/: db.py  migrate.py  tracer.py  userflair_import.py  userflair_update.py
