[tool.poetry]
name = "switcharoo"
version = "3.2.3"
description = "Bot that ensures additions to Reddit's old switcharoo follow the rules"
authors = ["Peter DeVita <mewtwo2643@yahoo.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
praw = "^7.7"
prawcore = "^2.3.0"
pony = "^0.7.16"
regex = "^2022.1.18"
PyMySQL = "^1.0.2"
requests = "^2.27.1"
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
switcharoohelper = 'switcharoo.main:main'
switcharoohelper-checkup = 'switcharoo.check_up:check_up'
switcharoohelper-flairs = 'switcharoo.tools.userflair_update:main'
